# r_giskard

./: .gitignore  .gitmodules  README.md  requirements.txt
core/: .clang-format  CMakeLists.txt  main.cpp
core/include/: error_t.h  simulator.hpp
core/include/base/: CoreState.hpp  EmotionalCore.h  EmotionalStateAnalyzer.hpp  EmotionalStates.hpp  InDataDescriptors.hpp
core/include/base_core/: EmotionalCore.h  common.h
core/include/base_core/components/: CoreParams.hpp  CoreState.hpp  EmotionalCoreDataWriter.hpp  EmotionalStateAnalyzer.hpp  EmotionalStates.hpp  InDataDescriptors.hpp
core/src/: simulator.cpp
core/src/base/: CoreParams.cpp  CoreState.cpp  EmotionalCore.cpp  EmotionalCoreDataWriter.cpp  EmotionalStateAnalyzer.cpp  EmotionalStates.cpp
core/src/base_core/: EmotionalCore.cpp
core/src/base_core/components/: CoreParams.cpp  CoreState.cpp  EmotionalCoreDataWriter.cpp  EmotionalStateAnalyzer.cpp  EmotionalStates.cpp  InDataDescriptors.cpp
core/test/: EmotionalCore_tests.cpp  EmotionalCore_tests.h
core/test/base_components/: CoreState_tests.cpp  EmotionalStatesManager_tests.cpp  InDataDescriptor_tests.cpp  InDataDescriptor_tests.hpp
core/test/base_core/: CoreState_tests.cpp  EmotionalStatesManager_tests.cpp  InDataDescriptor_tests.cpp
emotional_core/: .clang-format  CMakeLists.txt  README.md
emotional_core/include/: AnimalEmotionalCore.hpp  GenericEmotionalCore.hpp  error_t.h
response_core/: README.md  r_giskard_core.h  reflex_template.c
simulator/: sim.py
sw/: CMakeLists.txt  main.cpp  r_giskard_core.c  reflex_template.h
(+35 files in other folders)
